src/objects/Paid_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Paid Fees</relationshipLabel>
        <relationshipName>Paid_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Fee_Amount__c</fullName>
        <label>Paid Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Schedule__c</fullName>
        <label>Repayment Schedule</label>
        <referenceTo>Repayment_Schedule__c</referenceTo>
        <relationshipLabel>Paid Fees</relationshipLabel>
        <relationshipName>Paid_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Paid Fee</label>
    <nameField>
        <label>Paid Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>